--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get:
   http: ^0.13.0
+  get_storage: ^2.0.3
+  flutter_windowmanager: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -39,7 +41,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - imagens/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
