--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^0.13.0
   get_storage: ^2.0.3
   flutter_speed_dial: ^4.3.0
+  timezone: any
 
 dev_dependencies:
   flutter_test:
