--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_messaging: ^14.4.1
   flutter_local_notifications: ^14.0.0
   uuid: ^3.0.6
+  permission_handler: ^10.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
