--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,10 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_database: ^10.1.1
   firebase_messaging: ^14.4.1
-  flutter_local_notifications: ^14.0.0
+  flutter_local_notifications: ^9.4.0
   uuid: ^3.0.6
   permission_handler: ^10.2.0
+  flutter_native_timezone: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
