--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   uuid: ^3.0.6
   permission_handler: ^10.2.0
   flutter_native_timezone: ^2.0.0
+  provider:
 dev_dependencies:
   flutter_test:
     sdk: flutter
